# ml

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.cuda  LICENSE  README.md  pyproject.toml
apps/: permanent.py
apps/OSG/: osg.py  test_osg.py
apps/data_collection/: generate_dataset copy.ipynb  generate_dataset.ipynb  scrapping_google_images.py
apps/fastapi/: README.md  app.py  score_card.py  stats.py
apps/fastapi/config/: default.yaml
apps/fastapi/config/server/: prod.yaml
apps/fastapi/config/yolo/: default.yaml
apps/fastapi/routes/: score_card.py
apps/nn/: README.md  __init__.py  run.py  serve.py
apps/nn/room_segmentation/: embedding.py  osg_predictions.py  predictor.py  samolet_training_script.ipynb
apps/nn/room_segmentation/OSG/: osg.py  test_osg.py
apps/nn/yolov8/: YOLOv8.ipynb  model.py  process.py  score.py
apps/nn/yolov8/fastapi/: models.py  routes.py
apps/nn/yolov8/trackers/: bytetrack.py  tracker.yaml
apps/object/: README.md  base.py  store.py  yandex.py
apps/room_segmentation/: embedding.py  osg_predictions.py  predictor.py
apps/tests/serve/: test_served_model.py
apps/utility/: bbox.py  split_video.py
apps/vector/: base.py  store.py  yandex.py
config/yolo/: default.yaml
scripts/: serve.sh  uvicorn.sh
