[tool.poetry]
name = "samolet-ml"
version = "0.0.1"
description = "ML сервис для решения задачи о вычислении степени отделки квартиры"
authors = ["Aleksandr Lobanov <aleksandr.lobanov.official@gmail.com>"]
readme = "README.md"
packages = [{include = "samolet_ml"}]

[tool.poetry.dependencies]
python = ">=3.10"
opencv-python = "^4.7.0.72"
transformers = ">=4.29.2"
datasets = ">=2.12.0"
torch = ">=2.0.1"
scikit-learn = ">=1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
