[tool.poetry]
name = "samolet-ml"
version = "0.0.1"
description = "ML сервис для решения задачи о вычислении степени отделки квартиры"
authors = ["Aleksandr Lobanov <aleksandr.lobanov.official@gmail.com>"]
readme = "README.md"
packages = [{include = "samolet_ml"}]

[tool.poetry.dependencies]
python = ">=3.10"
opencv-python = "^4.7.0.72"
ipykernel = "^6.23.1"
requests = "^2.30.0"
lxml = "^4.9.2"
bs4 = "^0.0.1"
selenium = "^4.9.1"
imagehash = "^4.3.1"
matplotlib = "^3.7.1"
pandas = "^2.0.1"
seaborn = "^0.12.2"
numpy = "^1.24.3"
datasets = "^2.12.0"
transformers = "^4.29.2"
torch = "2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
