[tool.poetry]
name = "samolet-ml"
version = "0.0.1"
description = "ML сервис для решения задачи о вычислении степени отделки квартиры"
authors = ["Aleksandr Lobanov <aleksandr.lobanov.official@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
torch = { version = ">=2.0.1", source = "torch_cuda" }
torchvision = { version = ">=0.15.2", source = "torch_cuda" }
python = ">=3.10"
opencv-python = "^4.7.0.72"
rich = "^13.3.5"
pytest = "^7.3.1"
ultralytics = "^8.0.107"
urllib3 = "^1.26.0"
fastapi = "^0.95.2"
python-multipart = "^0.0.6"
uvicorn = "^0.22.0"
onnx = "^1.14.0"
onnxruntime = "^1.14.1"
cython = "^0.29.34"
numpy = "^1.24.3"
hydra-core = "^1.3.2"
gunicorn = "^20.1.0"
waitress = "^2.1.2"
hypercorn = "^0.14.3"
transformers = ">=4.29.2"
datasets = ">=2.12.0"

scikit-learn = "^1.2.2"

[[tool.poetry.source]]
name = "torch_cuda"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
